--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 
-project(glicko LANGUAGES CXX)
+project(glicko VERSION 0.3.2 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -8,3 +8,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(glicko main.cpp glicko.h)
+add_compile_definitions(GLICKO_VERSION="${CMAKE_PROJECT_VERSION}")
